--- a/Administracion/templates/Tercero/editar.html
+++ b/Administracion/templates/Tercero/editar.html
@@ -1,4 +1,5 @@
-{% extends 'EVA/_common/base.html' %}
+{% extends 'administracion/base_administracion.html' %}
+{#{% extends 'EVA/_common/base.html' %}#}
 {% load static %}
 <title>{% block titulo %}Editar Tercero{% endblock %}</title>
 {% block main %}
@@ -7,7 +8,7 @@
             <div class="card card-register mx-auto mt-5">
                 <div class="card-header">Editar Tercero</div>
                 <div class="card-body">
-{#
+
                     <form action="{% url 'Administracion:tercero-editar' tercero.id %}" id="tercero-form" method="post" >
                         {% csrf_token %}
                         <div class="form-group">
@@ -59,11 +60,7 @@
                                     <label for="fecha_modificacion">Fecha de modificación</label>
                                     <input class="form-control" id="fecha_modificacion" name="fecha_modificacion" placeholder="Seleccione una fecha" value="{{ tercero.fecha_modificacion | date:'Y-m-d' }}" required>
                                 </div>
-                                 <div class="col-md-6">
-                                     <br>
-                                    <label for="terceros">Terceros</label>
-                                    <input class="form-control" id="terceros" type="text" name="terceros" placeholder="Ingrese terceros" required maxlength="10" value="{{ tercero.terceros }}">
-                                </div>
+
                                 <div class="col-md-6">
                                     <br>
                                     <label for="cargo_select">Tipo Terceros</label>
