--- a/Administracion/templates/Tercero/editar.html
+++ b/Administracion/templates/Tercero/editar.html
@@ -1,7 +1,12 @@
 {% extends 'administracion/base_administracion.html' %}
-{#{% extends 'EVA/_common/base.html' %}#}
 {% load static %}
 <title>{% block titulo %}Editar Tercero{% endblock %}</title>
+{% block styles %}
+<!-- DEMO related CSS below -->
+	<link rel="stylesheet" media="screen, print" href="{%static 'EVA/Plantilla/css/fa-brands.css'  %}">
+	<!-- page related CSS below -->
+	<link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/select2/select2.bundle.css' %}">
+{% endblock %}
 {% block main %}
     <div class="content-wrapper">
         <div class="container-fluid">
@@ -9,7 +14,7 @@
                 <div class="card-header">Editar Tercero</div>
                 <div class="card-body">
 
-                    <form action="{% url 'Administracion:tercero-editar' tercero.id %}" id="tercero-form" method="post" >
+                    <form action="{% url 'Administracion:terceros-editar' tercero.id %}" id="tercero-form" method="post" >
                         {% csrf_token %}
                         <div class="form-group">
                             <div class="form-row">
@@ -28,7 +33,7 @@
                             <div class="form-row">
                                 <div class="col-md-6">
                                     <label for="tipo_identificacion_select">Tipo de Identificación</label>
-                                    <select class="custom-select" id="tipo_identificacion_select" name="tipo_identificacion_id" required>
+                                    <select class="select2 form-control w-100 select2-selection--single" id="tipo_identificacion_select" name="tipo_identificacion_id" required>
                                         <option value="" >Seleccione un Tipo de Identificación</option>
                                         {% for tipo_id in tipo_identificaciones %}
                                             <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_identificacion_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
@@ -37,7 +42,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <label for="empresa_select">Empresa</label>
-                                    <select class="custom-select" id="empresa_select" name="empresa_id" required>
+                                    <select class="select2 form-control w-100 select2-selection--single" id="empresa_select" name="empresa_id" required>
                                         <option value="" >Seleccione una Empresa</option>
                                         {% for empresa in empresas %}
                                             <option value="{{ empresa.id }}" {% if empresa.id == tercero.empresa_id %} selected {% endif %}>{{ empresa.nombre }}</option>
@@ -52,29 +57,39 @@
                             <div class="form-row">
 
                                 <div class="col-md-6">
-                                    <label for="fecha_creacion">Fecha de creación</label>
-                                    <input class="form-control" id="fecha_creacion" name="fecha_creacion" placeholder="Seleccione una fecha" value="{{ tercero.fecha_creacion | date:'Y-m-d' }}" required>
-                                </div>
-                                <div class="col-md-6">
-
-                                    <label for="fecha_modificacion">Fecha de modificación</label>
-                                    <input class="form-control" id="fecha_modificacion" name="fecha_modificacion" placeholder="Seleccione una fecha" value="{{ tercero.fecha_modificacion | date:'Y-m-d' }}" required>
-                                </div>
-
-                                <div class="col-md-6">
                                     <br>
                                     <label for="cargo_select">Tipo Terceros</label>
-                                    <select class="custom-select" id="tipo_select" name="tipo_tercero_id" required>
+                                    <select class="select2 form-control w-100 select2-selection--single" id="tipo_select" name="tipo_tercero_id" required>
                                         <option value="" >Seleccione un Tipo de Tercero</option>
                                         {% for tipo in tipo_terceros %}
                                             <option value="{{ tipo.id }}" {% if tipo.id == tercero.tipo_tercero_id %} selected {% endif %}>{{ tipo.nombre }}</option>
                                         {% endfor %}
                                     </select>
                                 </div>
+                                 <div class="col-md-6">
+                                    <br>
+                                    <label for="centro_select">Departamento</label>
+                                    <select class="select2 form-control w-100 select2-selection--single" id="departamento_select" name="centro_poblado_id" required>
+                                        <option value="" >Seleccione un Departamento</option>
+                                        {% for centro in centro_poblados %}
+                                            <option value="{{ centro.id }}" {% if centro.id == tercero.centro_poblado.municipio.departamento_id %} selected {% endif %}>{{ centro.nombre }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                                <div class="col-md-6">
+                                    <br>
+                                    <label for="centro_select">Municipio</label>
+                                    <select class="select2 form-control w-100 select2-selection--single" id="municipio_select" name="centro_poblado_id" required>
+                                        <option value="" >Seleccione un Municipio</option>
+                                        {% for centro in centro_poblados %}
+                                            <option value="{{ centro.id }}" {% if centro.id == tercero.centro_poblado.municipio_id %} selected {% endif %}>{{ centro.nombre }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
                                 <div class="col-md-6">
                                     <br>
                                     <label for="centro_select">Centro Poblado</label>
-                                    <select class="custom-select" id="centro_select" name="centro_poblado_id" required>
+                                    <select class="select2 form-control w-100 select2-selection--single" id="centro_select" name="centro_poblado_id" required>
                                         <option value="" >Seleccione un Centro Poblado</option>
                                         {% for centro in centro_poblados %}
                                             <option value="{{ centro.id }}" {% if centro.id == tercero.centro_poblado_id %} selected {% endif %}>{{ centro.nombre }}</option>
@@ -99,7 +114,7 @@
                                 <button id="guardar" class="btn btn-primary btn-block">Guardar</button>
                             </div>
                             <div style="padding-left: 15px">
-                                <a href="{% url 'Administracion:tercero' %}" class="btn btn-danger btn-block">Cancelar</a>
+                                <a href="{% url 'Administracion:terceros' %}" class="btn btn-danger btn-block">Cancelar</a>
                             </div>
                         </div>
                     </form>
@@ -132,4 +147,103 @@
             });
         })
     </script>
+
+    <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
+	<script>
+		$(document).ready(function () {
+			$(function() {
+				$('.select2').select2();
+
+				$(".select2-placeholder-multiple").select2({
+					placeholder: "Select State"
+				});
+				$(".js-hide-search").select2({
+					minimumResultsForSearch: 1 / 0
+				});
+				$(".js-max-length").select2({
+					maximumSelectionLength: 2,
+					placeholder: "Select maximum 2 items"
+				});
+				$(".select2-placeholder").select2({
+					placeholder:"Select a state",
+					allowClear: true
+				});
+
+				$(".js-select2-icons").select2({
+					minimumResultsForSearch: 1 / 0,
+					templateResult: icon,
+					templateSelection: icon,
+					escapeMarkup: function (elm) {
+						return elm
+					}
+				});
+				function icon(elm) {
+					elm.element;
+					return elm.id ? "<i class='" + $(elm.element).data("icon") + " mr-2'></i>" + elm.text : elm.text
+				}
+
+				$(".js-data-example-ajax").select2({
+				  ajax: {
+				    url: "https://api.github.com/search/repositories",
+				    dataType: 'json',
+				    delay: 250,
+				    data: function (params) {
+				      return {
+				        q: params.term, // search term
+				        page: params.page
+				      };
+				    },
+				    processResults: function (data, params) {
+				      // parse the results into the format expected by Select2
+				      // since we are using custom formatting functions we do not need to
+				      // alter the remote JSON data, except to indicate that infinite
+				      // scrolling can be used
+				      params.page = params.page || 1;
+
+				      return {
+				        results: data.items,
+				        pagination: {
+				          more: (params.page * 30) < data.total_count
+				        }
+				      };
+				    },
+				    cache: true
+				  },
+				  placeholder: 'Search for a repository',
+				  escapeMarkup: function (markup) { return markup; }, // let our custom formatter work
+				  minimumInputLength: 1,
+				  templateResult: formatRepo,
+				  templateSelection: formatRepoSelection
+				});
+
+				function formatRepo (repo) {
+				  if (repo.loading) {
+				    return repo.text;
+				  }
+
+				  var markup = "<div class='select2-result-repository clearfix d-flex'>" +
+				    "<div class='select2-result-repository__avatar mr-2'><img src='" + repo.owner.avatar_url + "' class='width-2 height-2 mt-1 rounded' /></div>" +
+				    "<div class='select2-result-repository__meta'>" +
+				      "<div class='select2-result-repository__title fs-lg fw-500'>" + repo.full_name + "</div>";
+
+				  if (repo.description) {
+				    markup += "<div class='select2-result-repository__description fs-xs opacity-80 mb-1'>" + repo.description + "</div>";
+				  }
+
+				  markup += "<div class='select2-result-repository__statistics d-flex fs-sm'>" +
+				    "<div class='select2-result-repository__forks mr-2'><i class='fal fa-lightbulb'></i> " + repo.forks_count + " Forks</div>" +
+				    "<div class='select2-result-repository__stargazers mr-2'><i class='fal fa-star'></i> " + repo.stargazers_count + " Stars</div>" +
+				    "<div class='select2-result-repository__watchers mr-2'><i class='fal fa-eye'></i> " + repo.watchers_count + " Watchers</div>" +
+				  "</div>" +
+				  "</div></div>";
+
+				  return markup;
+				}
+
+				function formatRepoSelection (repo) {
+				  return repo.full_name || repo.text;
+				}
+			});
+		});
+	</script>
 {% endblock %}
