--- a/Administracion/templates/Tercero/index.html
+++ b/Administracion/templates/Tercero/index.html
@@ -1,11 +1,10 @@
-{#{% extends 'EVA/_common/base.html' %}#}
 {% extends 'administracion/base_administracion.html' %}
 {% load static %}
 <title>{% block titulo %}Tercero{% endblock %}</title>
 {% block main %}
     <div class="content-wrapper">
         <div class="container-fluid">
-            <a class="btn btn-primary" href="{% url 'Administracion:tercero-crear' %}">Agregar Tercero</a>
+            <a class="btn btn-primary" href="{% url 'Administracion:terceros-crear' %}">Agregar Tercero</a>
             <br>
             <br>
             <div class="card mb-3">
@@ -24,6 +23,8 @@
                                     <th>Fecha de creación</th>
                                     <th>Fecha de modificación</th>
                                     <th>Tipo tercero</th>
+                                    <th>Departamento</th>
+                                    <th>Municipio</th>
                                     <th>Centro poblado</th>
                                     <th>Acción</th>
 
@@ -43,10 +44,12 @@
                                         <td>{{ tercero.fecha_creacion }}</td>
                                         <td>{{ tercero.fecha_modificacion }}</td>
                                         <td>{{ tercero.tipo_tercero }}</td>
+                                        <td>{{ tercero.centro_poblado.municipio.departamento }}</td>
+                                        <td>{{ tercero.centro_poblado.municipio }}</td>
                                         <td>{{ tercero.centro_poblado }}</td>
                                       <td>
 
-                                            <a href="{% url 'Administracion:tercero-editar' tercero.id %}" class="btn btn-info">Editar</a>
+                                            <a href="{% url 'Administracion:terceros-editar' tercero.id %}" class="btn btn-info">Editar</a>
 
 
                                             <button class="btn btn-danger" id="eliminar_{{ tercero.id }}" type="button" onclick="fConfirmarEliminar({{ tercero.id }})">Eliminar</button>
@@ -62,7 +65,7 @@
             </div>
         </div>
     </div>
-    {% include '_elements/_modal_confirmar_eliminar.html' with objeto='administracion/tercero' %}
+    {% include '_elements/_modal_confirmar_eliminar.html' with objeto='administracion/terceros' %}
 {% endblock %}
 {% block scripts %}
 <script src="{% static 'EVA/Plantilla/General/confirmarEliminar.js' %}"></script>
