EVA-3 feat: Se asigna estructura templates/Administracion y se agregan archivos

--- a/Administracion/templates/Administracion/Tercero/editar.html
+++ b/Administracion/templates/Administracion/Tercero/editar.html
@@ -1,9 +1,9 @@
-{% extends 'administracion/base_administracion.html' %}
+{% extends 'Administracion/_common/base_administracion.html' %}
 {% load static %}
-<title>{% block titulo %}Crear Tercero{% endblock %}</title>
+<title>{% block titulo %}Editar Tercero{% endblock %}</title>
 {% block styles %}
 <!-- DEMO related CSS below -->
-	<link rel="stylesheet" media="screen, print" href="{%static 'EVA/Plantilla/css/fa-brands.css'  %}">
+	<link rel="stylesheet" media="screen, print" href="{%static 'EVA/Plantilla/css/fa-brands.css' %}">
 	<!-- page related CSS below -->
 	<link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/select2/select2.bundle.css' %}">
 {% endblock %}
@@ -11,94 +11,105 @@
     <div class="content-wrapper">
         <div class="container-fluid">
             <div class="card card-register mx-auto mt-5">
-                <div class="card-header">Agregar Tercero</div>
+                <div class="card-header">Editar Tercero</div>
                 <div class="card-body">
-                    {% if error %}
-                        <div class="alert alert-danger alert-dismissible fade show">
-                            <strong>{{ error }}</strong>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                    {% endif %}
-                    <form action="{% url 'Administracion:terceros-crear' %}" id="tercero" method="post">
+
+                    <form action="{% url 'Administracion:terceros-editar' tercero.id %}" id="tercero-form" method="post" >
                         {% csrf_token %}
                         <div class="form-group">
                             <div class="form-row">
                                 <div class="col-md-6">
-                                    <label for="tercero_name">Nombre</label>
+                                    <label for="empleado_name">Nombre</label>
                                     <input class="form-control" id="tercero_name" type="text" name="nombre" placeholder="Ingrese el nombre" required maxlength="100" value="{{ tercero.nombre }}">
                                 </div>
                                 <div class="col-md-6">
-                                    <label for="tercero_identificacion">Identificación</label>
-                                    <input class="form-control" id="tercero_identificacion" type="text" name="identificacion" placeholder="Ingrese número de identificación" required maxlength="20" value="{{ tercero.identificacion }}">
-                                 </div>
-                                 <div class="col-md-6">
-                                 <br>
+                                    <label for="empleado_last_name">Identificación</label>
+                                    <input class="form-control" id="tercero_identificacion" type="text" name="identificacion" placeholder="Ingrese el número de identificación" required maxlength="15" value="{{ tercero.identificacion }}">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="form-row">
+                                <div class="col-md-6">
                                     <label for="tipo_identificacion_select">Tipo de Identificación</label>
                                     <select class="select2 form-control w-100 select2-selection--single" id="tipo_identificacion_select" name="tipo_identificacion_id" required>
                                         <option value="" >Seleccione un Tipo de Identificación</option>
-                                        {% for tipo_id in tipo_identificacion %}
+                                        {% for tipo_id in tipo_identificaciones %}
                                             <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_identificacion_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
                                         {% endfor %}
                                     </select>
                                 </div>
                                 <div class="col-md-6">
-                                 <br>
                                     <label for="empresa_select">Empresa</label>
                                     <select class="select2 form-control w-100 select2-selection--single" id="empresa_select" name="empresa_id" required>
-                                        <option value="" >Seleccione una empresa</option>
-                                        {% for tipo_id in empresas %}
-                                            <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.empresa_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
+                                        <option value="" >Seleccione una Empresa</option>
+                                        {% for empresa in empresas %}
+                                            <option value="{{ empresa.id }}" {% if empresa.id == tercero.empresa_id %} selected {% endif %}>{{ empresa.nombre }}</option>
                                         {% endfor %}
-                                    </select>
-                                </div>
-
-                                <div class="col-md-6">
-                                 <br>
-                                    <label for="tipo_terceros_select">Tipo Terceros</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="tipo_terceros_select" name="tipo_tercero_id" required>
-                                        <option value="" >Seleccione un Tipo de Tercero</option>
-                                        {% for tipo_id in tipo_terceros %}
-                                            <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_tercero_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-
-                                <div class="col-md-6">
-                                 <br>
-                                    <label for="centro_poblado_select">Departamento</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="departamento_select" name="centro_poblado_id" required>
-                                        <option value="" >Seleccione un Departamento</option>
-                                        {% for departamento in departamentos %}
-                                            <option value="{{ departamento.id }}">{{ departamento.nombre }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-
-                                <div class="col-md-6">
-                                 <br>
-                                    <label for="centro_poblado_select">Municipio</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="municipio_select" name="centro_poblado_id" required>
-                                    </select>
-                                </div>
-
-                                <div class="col-md-6">
-                                 <br>
-                                    <label for="centro_poblado_select">Centro Poblado</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="centro_poblado_select" name="centro_poblado_id" required>
-
                                     </select>
                                 </div>
 
                             </div>
+                        </div>
 
+                        <div class="form-group">
+                            <div class="form-row">
+
+                                <div class="col-md-6">
+                                    <br>
+                                    <label for="cargo_select">Tipo Terceros</label>
+                                    <select class="select2 form-control w-100 select2-selection--single" id="tipo_select" name="tipo_tercero_id" required>
+                                        <option value="" >Seleccione un Tipo de Tercero</option>
+                                        {% for tipo in tipo_terceros %}
+                                            <option value="{{ tipo.id }}" {% if tipo.id == tercero.tipo_tercero_id %} selected {% endif %}>{{ tipo.nombre }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                                 <div class="col-md-6">
+                                    <br>
+                                    <label for="centro_select">Departamento</label>
+                                    <select class="select2 form-control w-100 select2-selection--single" id="departamento_select" name="centro_poblado_id" required>
+                                        <option value="" >Seleccione un Departamento</option>
+                                        {% for departamento in departamentos %}
+                                            <option value="{{ departamento.id }}" >{{ departamento.nombre }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                                <div class="col-md-6">
+                                    <br>
+                                    <label for="centro_select">Municipio</label>
+                                    <select class="select2 form-control w-100 select2-selection--single" id="municipio_select" name="centro_poblado_id" required>
+{#
+                                    </select>
+                                </div>
+                                <div class="col-md-6">
+                                    <br>
+                                    <label for="centro_select">Centro Poblado</label>
+                                    <select class="select2 form-control w-100 select2-selection--single" id="centro_poblado_select" name="centro_poblado_id" required>
+{#
+                                    </select>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="custom-control custom-switch">
+                                        <br>
+                                        <br>
+                                        <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="defaultChecked" name="estado" checked="" value="True" {% if tercero.estado %}checked{% endif %}>
+                                        <label class="custom-control-label" for="defaultChecked">Estado</label>
+							            </div>
+{#                                        <input class="custom-control-input" id="estado" name="estado" type="checkbox" value="True" {% if tercero.estado %}checked{% endif %}>#}
+{#                                        <label class="form-check-label" for="estado">Estado</label>#}
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
 
 
                         <div class="form-row">
-                            <div>
-                                <button id="agregar" class="btn btn-primary btn-block">Agregar</button>
+                            <div >
+                                <button id="guardar" class="btn btn-primary btn-block">Guardar</button>
                             </div>
                             <div style="padding-left: 15px">
                                 <a href="{% url 'Administracion:terceros' %}" class="btn btn-danger btn-block">Cancelar</a>
@@ -112,7 +123,8 @@
 {% endblock %}
 {% block scripts %}
 
-<link href="{% static 'EVA/Plantilla/css/jquery-ui.min.css' %}" rel="stylesheet" type="text/css">
+      <!-- Custom styles for Widgets of calendar-->
+    <link href="{% static 'EVA/Plantilla/css/jquery-ui.min.css' %}" rel="stylesheet" type="text/css">
     <script src="{% static 'EVA/Plantilla/js/jquery-ui.min.js' %}"></script>
     <script type="text/javascript">
         $(function(){
@@ -124,7 +136,7 @@
         })
     </script>
 
-    <script type="text/javascript">
+     <script type="text/javascript">
         $(function(){
             $("#fecha_modificacion").datepicker({
                 changeMonth:true,
@@ -133,7 +145,6 @@
             });
         })
     </script>
-
 
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
 	<script>
@@ -233,5 +244,22 @@
 			});
 		});
 	</script>
-    <script src="{% static 'EVA/Plantilla/js/select.js' %}"></script>
+    <script src="{% static 'Administracion/js/select_divipol.js' %}"></script>
+
+    <script type="text/javascript">
+	$('#defaultIndeterminate').prop('indeterminate', true)
+
+	var toggleCheckbox = function(){
+		$('#js-checkbox-toggle').toggleText('Change to CIRCLE', 'Change back to default');
+		$('.frame-wrap .custom-checkbox').toggleClass('custom-checkbox-circle');
+	}
+
+	var toggleRadio = function (){
+		$('#js-radio-toggle').toggleText('Change to ROUNDED', 'Change back to default');
+		$('.frame-wrap .custom-radio').toggleClass('custom-radio-rounded');
+	}
+
+
+
+    </script>
 {% endblock %}
