--- a/Administracion/templates/Administracion/Tercero/principal.html
+++ b/Administracion/templates/Administracion/Tercero/principal.html
@@ -1,4 +1,4 @@
-{% extends 'administracion/base_administracion.html' %}
+{% extends 'administracion/../Administracion/_common/base_administracion.html' %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
