--- a/Administracion/templates/Administracion/Tercero/principal.html
+++ b/Administracion/templates/Administracion/Tercero/principal.html
@@ -1,4 +1,8 @@
-{% extends 'administracion/../Administracion/_common/base_administracion.html' %}
+{% extends 'Administracion/_common/base_administracion.html' %}
+{% load static %}
+{% block styles %}
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-solid.css' %}">
+{% endblock styles %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -9,7 +13,7 @@
     {% block main %}
         <div class="subheader">
             <h1 class="subheader-title">
-                <i class='subheader-icon fal fa-'></i> Módulo <span class='fw-300'>Terceros</span>
+                <i class='fas fa-handshake'></i> Módulo <span class='fw-300'>Terceros</span>
                 <small>
 
                 </small>
