--- a/Administracion/templates/Administracion/_common/menu_aplicacion.html
+++ b/Administracion/templates/Administracion/_common/menu_aplicacion.html
@@ -1,6 +1,6 @@
  <li>
         <a href="{% url 'Administracion:terceros' %}" title="Terceros" data-filter-tags="terceros">
-            <i class="fal fa-user"></i>
+            <i class="fas fa-handshake"></i>
             <span class="nav-link-text" data-i18n="nav.th_terceros">Terceros</span>
         </a>
     </li>
