EVA-3 feat: Se cambia título y se modifica el tipo de toast.

--- a/Administracion/templates/Administracion/Tercero/index.html
+++ b/Administracion/templates/Administracion/Tercero/index.html
@@ -25,7 +25,7 @@
 
     <div class="subheader">
         <h1 class="subheader-title">
-            <i class='far fa-handshake'></i> Módulo <span class='fw-300'>Terceros</span>
+            <i class='far fa-handshake'></i> Terceros <span class='fw-300'></span>
             <small>
 
             </small>
@@ -197,8 +197,7 @@
         $(document).ready(function(){
             var mensaje = $('#mensaje').val();
             if (mensaje){
-                toastr['info'](mensaje);
-            }
+                toastr['success'](mensaje);            }
         });
         </script>
 
