EVA-3 feat: Se agrega stylesheet para visualizar íconos regular.

--- a/Administracion/templates/Administracion/Tercero/principal.html
+++ b/Administracion/templates/Administracion/Tercero/principal.html
@@ -1,7 +1,7 @@
 {% extends 'Administracion/_common/base_administracion.html' %}
 {% load static %}
 {% block styles %}
-    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-solid.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
 {% endblock styles %}
 <!DOCTYPE html>
 <html lang="en">
@@ -13,7 +13,7 @@
     {% block main %}
         <div class="subheader">
             <h1 class="subheader-title">
-                <i class='fas fa-handshake'></i> Módulo <span class='fw-300'>Terceros</span>
+                <i class='far fa-handshake'></i> Terceros <span class='fw-300'></span>
                 <small>
 
                 </small>
